# gtk-app-generator

./: Makefile  gtk-app-generator.doap  gtk-app-generator.py
js/: configure.ac  project.doap  template.manifest
js/data/: Makefile.am  app-menu.ui  appdata.xml.in  desktop.in  service.in
js/po/: it.po
js/src/: Makefile.am  main.js  window.js
py3/: autogen.sh  configure.ac  rpm.spec  template.manifest
py3/data/: Makefile.am  busname  data.gresource.xml  gschema.xml  main.ui
py3/data/icons/: Makefile.am
py3/po/: POTFILES.in
py3/src/: Makefile.am  app.in  launcher.in  main.py  package.py  util.py  window.py
template/: autogen.sh
vala/: Makefile.am  configure.ac  rpm.spec  template.manifest
vala/data/: Makefile.am  desktop.in  main.ui  service.in
vala/po/: POTFILES.in  POTFILES.skip
vala/src/: Makefile.am  config.vapi  launcher  main.vala  package.vala  src.gresource.xml  util.vala  window.vala
